--- a/noise-study.csproj
+++ b/noise-study.csproj
@@ -3,10 +3,8 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>noise_study</RootNamespace>
-    <Nullable>enable</Nullable>
+    <RootNamespace>NoiseStudio</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
 </Project>
